[metadata]
name = argo
version = attr: argo.__version__
classifiers = 
    Programming Language :: Python :: 3 :: Only

license = MIT
description = Argo: species-resolved profiling of antibiotic resistant genes with long-read metagenomics
long_description = file: README.md
long_description_content_type = text/markdown
keywords = 
    antibiotic resistant gene

[options]
zip_safe = False
python_requires = >=3.7
package_dir =
    = src
packages = find:

[options.entry_points]
console_scripts = 
    argo = argo.cli:cli

[options.packages.find]
where = src
